# uipath-python

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CODED-MCP-ACI-SPIKE.md  CODEOWNERS  CONTRIBUTING.md  PHASE_0_PROTOTYPE.md  PHASE_1_SPANPROCESSOR.md  PHASE_2_LOCAL_TESTING.md  PHASE_3_CLI_INTEGRATION.md  PHASE_4_BACKEND_API.md  PHASE_5_UI_UPDATES.md  PHASE_6_ROLLOUT.md  PLAN_UPSERTSPAN.md  README.md  SETUP.MD  ci.yaml  core.dockerfile  debug_config.json  index.html  llms-full.txt  llms.txt  main.py  mkdocs.yml  objects.inv  plan-move-auth-to-platform.md  plan.md  pyproject.toml  simple_math_agent.py  sitemap.xml  sonar-project.properties  tmpclaude-46e7-cwd
.agent/: INTERRUPT_SUSPEND_RESUME.md
.claude/: settings.local.json
.github/: dependabot.yml  labeler.yml
.pipelines/: security-scans.yml
AutomationSuite/: index.html
CONTRIBUTING/: index.html  index.md
FAQ/: index.html  index.md
actions/: index.html
assets/: index.html
buckets/: index.html
cli/: index.html  index.md
connections/: index.html
context_grounding/: index.html
docs/: FAQ.md  connections.md  index.md  jobs.md  llamaindex  processes.md
eval/: index.html  index.md
evals/: math_agent_eval_set.json  simple_math_test.json
evaluators/: math_accuracy_evaluator.json
getting_started_agent/: index.html
getting_started_cli/: index.html
getting_started_cloud/: index.html
getting_started_sdk/: index.html
jobs/: index.html
processes/: index.html
prototype/: GUARDRAIL_PATTERN_RESULTS.md  IMAGE1_TRANSFORMATION_RESULTS.md  INDEX.md  LANGGRAPH_TO_NOTLANGGRAPH_PLAN.md  README.md  SUMMARY.md  TRANSFORMATION_COMPARISON.md  guardrail_pattern_fixture.json  guardrail_transformation_output.json  image1_realistic_fixture.json  langgraph_fixture.json  langgraph_real.json  notlanggraph_real.json  output_sample.json  poc_langgraph_transform.py  poc_streaming_transform.py  run_and_store_results.py  run_guardrail_test.py  run_manual_test.py  span_transformer.py  streaming_output.json  test_transformer.py  transformation_input.json  transformation_output.json  transformation_visualization.json  transformed_output.json
queues/: index.html
release_policy/: index.html
samples/aws-strands-agent/: entry-points.json  main.py  pyproject.toml  uipath.json
samples/calculator/: README.md  agent.mermaid  enable_trace_logging.py  main.py  pyproject.toml  uipath.json
samples/calculator/coded-evals/eval-sets/: eval-set-1759985652937.json  test2.json
samples/calculator/coded-evals/evaluators/: contains.json
samples/calculator/evals/eval-sets/: compositional-scoring-example.json  default.json  evaluation-set-default.json  legacy.json
samples/calculator/evals/evaluators/: evaluator-default-trajectory.json  evaluator-default.json  llm-judge-semantic-similarity.json  llm-judge-strict-json-similarity.json
samples/calculator/evals/evaluators/custom/: correct_operator.py
samples/calculator/evals/evaluators/custom/types/: correct-operator-evaluator-types.json
samples/calculator/evaluationSets/: comprehensive_calculator_tests.json
samples/calculator/evaluations/eval-sets/: default.json  faithfulness-multi-model.json  legacy.json
samples/calculator/evaluations/evaluators/: context-precision-claude.json  context-precision-gemini.json  faithfulness-gemini.json  legacy-equality.json  legacy-json-similarity.json  legacy-llm-as-a-judge-sonnet-4.5.json  legacy-llm-as-a-judge.json  legacy-trajectory.json  llm-judge-gemini.json  llm-judge-haiku-4.5.json  llm-judge-sonnet-4.5.json  trajectory-gemini.json
samples/calculator/evaluations/evaluators/custom/: correct_operator.py
samples/calculator/evaluations/evaluators/custom/types/: correct-operator-evaluator-types.json
samples/calculator/evaluators/: exact_match.json  json_similarity.json
samples/invoice-dispute-investigation-agent/: _main.py  graph.py  pyproject.toml  state.py  supplier_website_reader.py
samples/multi-output-agent/: main.py  pyproject.toml  uipath.json
samples/multi-output-agent/.agent/: SDK_REFERENCE.md
samples/multi-output-agent/evaluations/evaluators/: legacy-equality-deep-nested.json  legacy-equality-full-output.json  legacy-equality-nested-path.json
samples/queue-interactions/: README.md  entry-points.json  pyproject.toml
samples/ticket-classification/: .env.example  README.md  agent.mermaid  executor.py  main.py  pyproject.toml  requirements.txt
samples/ticket-classification/escalation app/: escalation_agent_app.uiapp
scripts/: lint_httpx_client.py  (+1 more)
sdk/langchain/: main.py  pyproject.toml
sdk/langchain/tests/: conftest.py  test_langchain_client.py
sdk/langchain/uipath_langchain/: __init__.py
sdk/langchain/uipath_langchain/_cli/: __init__.py  _utils.py  cli_init.py  cli_run.py  interrupts.py
sdk/langchain/uipath_langchain/_cli/_runtime/: _output.py  _runtime.py
sdk/langchain/uipath_langchain/_cli/_utils/: _escalation.py  _graph.py  _key_value_store.py  _output.py
sdk/langchain/uipath_langchain/chat/: __init.py  models.py  platform_chat.py
sdk/langchain/uipath_langchain/chat/utils/: _chat_types.py
sdk/langchain/uipath_langchain/embeddings/: embeddings.py
sdk/langchain/uipath_langchain/retrievers/: context_grounding_retriever.py
sdk/langchain/uipath_langchain/tracers/: AsyncUiPathTracer.py  UiPathTracer.py  __init__.py  llmops_tracer.py
sdk/langchain/uipath_langchain/utils/: _request_mixin.py  _settings.py
sdk/langchain/uipath_langchain/utils/tests/: tests_uipath_cache.db
sdk/langchain/uipath_langchain/utils/tests/cached_embeddings/: text-embedding-3-large5034ec3c-85c9-54b8-ac89-5e0cbcf99e3b  text-embedding-3-largec48857ed-1302-5954-9e24-69fa9b45e457
sdk/langchain/uipath_langchain/vectorstores/: context_grounding_vectorstore.py  ecs_vectorstore.py
testcases/basic-testcase-e2e/: SPEC.md  bindings.json  entry-points.json  main.py  pyproject.toml  run.sh
testcases/basic-testcase-e2e/src/: assert.py  deploy.py
testcases/csv-processor-evals/: pyproject.toml  uipath.json
testcases/target-output-key-evals/: pyproject.toml  uipath.json
testcases/target-output-key-evals/src/: assert.py
(+987 files in other folders)
