[project]
name = "calculator-agent"
version = "0.0.1"
description = "Calculator agent testcase with custom evaluators"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "uipath>=2.4.8.dev1010780000,<2.4.8.dev1010790000",
]
requires-python = ">=3.11"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
uipath = { index = "testpypi" }

[tool.uv]
override-dependencies = [
    "uipath>=2.4.8.dev1010780000,<2.4.8.dev1010790000",
]
