[project]
name = "invoice-dispute-investigation-agent"
version = "0.0.1"
description = "Invoice Dispute Investigation Agent"
authors = [
    { name = "Eduard Stanculet" }
]
requires-python = ">=3.9"
dependencies = [
    "urllib3>=1.25.3,<3.0.0",
    "pydantic>=2",
    "typing-extensions>=4.7.1",
    "uipath_sdk>=0.0.80",
    "uipath_langchain>=0.0.60",
    "uipath_connectors.uipath_airdk >=1.53.6.dev2",
    "langchain",
    "langchain-core",
    "langchain-anthropic",
    "langchain-openai",
    "langgraph"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
