[project]
name = "python-script-basic-e2e"
version = "0.0.1"
description = "agent"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
     "uipath>=2.2.0",
     "httpx>=0.27.0",
     "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
uipath = { index = "testpypi" }