[project]
name = "target-output-key-evals"
version = "0.0.1"
description = "Tests for targetOutputKey path resolution in legacy evaluators"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "uipath",
]
requires-python = ">=3.11"

[tool.uv.sources]
uipath = { path = "../../", editable = true }
